nenolod     2005/11/06 23:14:26 UTC	(20051106-3597)
  Log:
  Remove code that we shouldn't be executing here.

  Changes:	Modified:
  +0 -4		trunk/src/authcookie.c (File Modified) 


jilles      2005/11/06 23:09:32 UTC	(20051106-3595)
  Log:
  Add +U to services umodes to make unkline possible.
  

  Changes:	Modified:
  +1 -1		trunk/protocol/hyperion.c (File Modified) 


nenolod     2005/11/06 22:50:16 UTC	(20051106-3593)
  Log:
  Add missing stuff.

  Changes:	Modified:
  +6 -5		trunk/include/authcookie.h (File Modified) 


nenolod     2005/11/06 22:45:31 UTC	(20051106-3591)
  Log:
  Don't go on wild hashtable traverse operations in expire_check(). This may fix brian's crash, I do not know.

  Changes:	Modified:
  +26 -31	trunk/src/node.c (File Modified) 


alambert    2005/11/06 21:58:38 UTC	(20051106-3589)
  Log:
  atheme.logout: Find match for both ticket and user

  Changes:	Modified:
  +6 -6		trunk/modules/xmlrpc/account.c (File Modified) 


alambert    2005/11/06 21:56:43 UTC	(20051106-3587)
  Log:
  atheme.account.register: use user_find_named()

  Changes:	Modified:
  +1 -1		trunk/modules/xmlrpc/account.c (File Modified) 


alambert    2005/11/06 21:52:51 UTC	(20051106-3585)
  Log:
  authcookie: clean stale authcookies every ten minutes

  Changes:	Modified:
  +3 -0		trunk/src/atheme.c (File Modified) 
  +31 -1	trunk/src/authcookie.c (File Modified) 


jilles      2005/11/06 21:48:28 UTC	(20051106-3583)
  Log:
  Add command logging to nickserv.
  

  Changes:	Modified:
  +1 -0		trunk/modules/nickserv/drop.c (File Modified) 
  +6 -0		trunk/modules/nickserv/freeze.c (File Modified) 
  +3 -0		trunk/modules/nickserv/ghost.c (File Modified) 
  +6 -0		trunk/modules/nickserv/hold.c (File Modified) 
  +4 -0		trunk/modules/nickserv/identify.c (File Modified) 
  +2 -0		trunk/modules/nickserv/info.c (File Modified) 
  +4 -0		trunk/modules/nickserv/link.c (File Modified) 
  +5 -0		trunk/modules/nickserv/list.c (File Modified) 