@@ -4,7 +4,7 @@
  *
  * This file contains functionality which implements the OService RAW command.
  *
- * $Id: inject.c 2559 2005-10-04 06:56:29Z nenolod $
+ * $Id: inject.c 3601 2005-11-06 23:36:34Z jilles $
  */
 
 #include "atheme.h"
@@ -12,7 +12,7 @@
 DECLARE_MODULE_V1
 (
 	"operserv/inject", FALSE, _modinit, _moddeinit,
-	"$Id: inject.c 2559 2005-10-04 06:56:29Z nenolod $",
+	"$Id: inject.c 3601 2005-11-06 23:36:34Z jilles $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -54,6 +54,8 @@ static void os_cmd_inject(char *origin)
 		notice(opersvs.nick, origin, "Syntax: INJECT <parameters>");
 		return;
 	}
+
+	logcommand(opersvs.me, user_find(origin), CMDLOG_ADMIN, "INJECT %s", inject);
 
 	/* looks like someone INJECT'd an INJECT command.
 	 * this is probably a bad thing.
