@@ -4,7 +4,7 @@
  *
  * Loads a new module in.
  *
- * $Id: modunload.c 2135 2005-09-05 01:28:25Z nenolod $
+ * $Id: modunload.c 3601 2005-11-06 23:36:34Z jilles $
  */
 
 #include "atheme.h"
@@ -12,7 +12,7 @@
 DECLARE_MODULE_V1
 (
 	"operserv/modunload", FALSE, _modinit, _moddeinit,
-	"$Id: modunload.c 2135 2005-09-05 01:28:25Z nenolod $",
+	"$Id: modunload.c 3601 2005-11-06 23:36:34Z jilles $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -61,6 +61,7 @@ static void os_cmd_modunload(char *origin)
 
 		module_unload(m);
 
+		logcommand(opersvs.me, user_find(origin), CMDLOG_ADMIN, "MODUNLOAD %s", module);
 		notice(opersvs.nick, origin, "Module \2%s\2 unloaded.", module);
 	}
 }
