@@ -4,7 +4,7 @@
  *
  * This file contains functionality which implements the OService RAW command.
  *
- * $Id: raw.c 2559 2005-10-04 06:56:29Z nenolod $
+ * $Id: raw.c 3601 2005-11-06 23:36:34Z jilles $
  */
 
 #include "atheme.h"
@@ -12,7 +12,7 @@
 DECLARE_MODULE_V1
 (
 	"operserv/raw", FALSE, _modinit, _moddeinit,
-	"$Id: raw.c 2559 2005-10-04 06:56:29Z nenolod $",
+	"$Id: raw.c 3601 2005-11-06 23:36:34Z jilles $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -54,5 +54,6 @@ static void os_cmd_raw(char *origin)
 	}
 
 	snoop("RAW: \"%s\" by \2%s\2", s, origin);
+	logcommand(opersvs.me, user_find(origin), CMDLOG_ADMIN, "RAW %s", s);
 	sts("%s", s);
 }
