@@ -4,7 +4,7 @@
  *
  * This file contains functionality which implements the OService RAW command.
  *
- * $Id: restart.c 3377 2005-11-01 03:45:37Z nenolod $
+ * $Id: restart.c 3601 2005-11-06 23:36:34Z jilles $
  */
 
 #include "atheme.h"
@@ -12,7 +12,7 @@
 DECLARE_MODULE_V1
 (
 	"operserv/restart", FALSE, _modinit, _moddeinit,
-	"$Id: restart.c 3377 2005-11-01 03:45:37Z nenolod $",
+	"$Id: restart.c 3601 2005-11-06 23:36:34Z jilles $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -46,6 +46,7 @@ static void os_cmd_restart(char *origin)
 	expire_check(NULL);
 	db_save(NULL);
 
+	logcommand(opersvs.me, user_find(origin), CMDLOG_ADMIN, "RESTART");
 	snoop("RESTART: \2%s\2", origin);
 	wallops("Restarting by request of \2%s\2.", origin);
 
