@@ -4,7 +4,7 @@
  *
  * This file contains functionality which implements the OService RAW command.
  *
- * $Id: shutdown.c 2559 2005-10-04 06:56:29Z nenolod $
+ * $Id: shutdown.c 3601 2005-11-06 23:36:34Z jilles $
  */
 
 #include "atheme.h"
@@ -12,7 +12,7 @@
 DECLARE_MODULE_V1
 (
 	"operserv/shutdown", FALSE, _modinit, _moddeinit,
-	"$Id: shutdown.c 2559 2005-10-04 06:56:29Z nenolod $",
+	"$Id: shutdown.c 3601 2005-11-06 23:36:34Z jilles $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -46,6 +46,7 @@ static void os_cmd_shutdown(char *origin)
 	expire_check(NULL);
 	db_save(NULL);
 
+	logcommand(opersvs.me, user_find(origin), CMDLOG_ADMIN, "SHUTDOWN");
 	snoop("SHUTDOWN: \2%s\2", origin);
 	wallops("Shutting down by request of \2%s\2.", origin);
 
