@@ -4,7 +4,7 @@
  *
  * This file contains functionality which implements the OService UPDATE command.
  *
- * $Id: update.c 2559 2005-10-04 06:56:29Z nenolod $
+ * $Id: update.c 3601 2005-11-06 23:36:34Z jilles $
  */
 
 #include "atheme.h"
@@ -12,7 +12,7 @@
 DECLARE_MODULE_V1
 (
 	"operserv/update", FALSE, _modinit, _moddeinit,
-	"$Id: update.c 2559 2005-10-04 06:56:29Z nenolod $",
+	"$Id: update.c 3601 2005-11-06 23:36:34Z jilles $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -42,6 +42,7 @@ void _moddeinit()
 void os_cmd_update(char *origin)
 {
 	snoop("UPDATE: \2%s\2", origin);
+	logcommand(opersvs.me, user_find(origin), CMDLOG_ADMIN, "UPDATE");
 	wallops("Updating database by request of \2%s\2.", origin);
 	expire_check(NULL);
 	db_save(NULL);
